# video-player

./: README.md  package-lock.json  package.json
.serena/: project.yml
chrome-extension/: background.js  content.js  manifest.json  style.css
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/autogenerated/: add_custom_api.toml  add_custom_category.toml  add_custom_image_api.toml  add_custom_image_category.toml  clear_preload_queue.toml  delete_custom_api.toml  delete_custom_category.toml  delete_custom_image_api.toml  delete_custom_image_category.toml  download_image.toml  fetch_image.toml  fetch_video.toml  get_apis.toml  get_categories.toml  get_current_api.toml  get_current_category.toml  get_current_image_category.toml  get_image_categories.toml  get_preload_count.toml  pop_next_video.toml  preload_next.toml  set_current_api.toml  set_current_category.toml  set_current_image_category.toml
src-tauri/src/: main.rs
